# figura

./: .buildinfo  .editorconfig  .gitignore  Makefile  README.md  entities.html  export.html  genindex.html  geometry.html  index.html  install.html  io.html  names-and-colors.html  objects.inv  primer.html  primitives.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  shapes.html  units.html
.github/workflows/: build.yml  codeql-analysis.yml  gh-pages.yml  release.yml
_sources/: entities.rst.txt  primitives.rst.txt  shapes.rst.txt  units.rst.txt
_sources/tutorials/: 2d-geometry.rst.txt  bottle.rst.txt
docs/: conf.py  export.rst  geometry.rst  index.rst  install.rst  io.rst  names-and-colors.rst  primer.rst
docs/tutorials/: bottle.rst
figura/: __init__.py  __main__.py  _version.py  colormap.py  entities.py  gc.py  geometry.py  io.py  model.py  oper.py  primitives.py  shapes.py  transformations.py
figura/d2/: __init__.py  _geometry.py  _shapes.py
figura/d3/: __init__.py  _geometry.py  _primitives.py  _shapes.py
tests/: test_entities.py  test_gc.py  test_geometry.py  test_io.py  test_main.py  test_oper.py  test_primitives.py  test_shapes.py  test_tutorials.py
tests/2d/: test_geometry_2d.py  test_shapes_2d.py
tests/3d/: test_geometry.py  test_primitives.py  test_shapes.py
tests/assets/: 2boxes.figura  box.figura  cube.iges  cube.step  empty.figura  empty_export.figura  funcs.figura  test.py
tutorials/: 2d-geometry.html  bottle.html
tutorials/2d-geometry/: channel.figura
tutorials/bottle/: bottle.figura
