[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "figura"
version = "0.1.0"
description = 'Create geometries using OpenCASCADE'
license = { text = "MIT License" }
authors = [
    {name = "David Andrs", email="andrsd@gmail.com"}
]
maintainers = [
    {name = "David Andrs", email="andrsd@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
keywords = [ "CAD", "geometry", "modeling", "FEM" ]

dependencies = [
    "pythonocc-core>=7.6.0"
]

[project.scripts]
figura = "figura.__main__:main"

[tool.setuptools]
packages = [
    "figura"
]
